# overnightPredict

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: .env.example  settings.yaml
scripts/: run_overnight.py
src/: __init__.py  cli.py
src/api/: __init__.py  routes.py  server.py  websocket.py
src/application/: __init__.py
src/application/dto/: __init__.py
src/application/services/: __init__.py  evaluator.py  executor.py  forecaster.py  meta_tuner.py  orchestrator.py  session_manager.py
src/application/use_cases/: __init__.py
src/core/: __init__.py  config.py  engine.py  models.py
src/core/config/: __init__.py  settings.py
src/core/exceptions/: __init__.py  base.py
src/core/utils/: __init__.py  async_helpers.py  id_generator.py  logging.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  prediction.py  question.py  session.py  task.py
src/domain/events/: __init__.py
src/domain/interfaces/: __init__.py  context_store.py  evaluator.py  event_bus.py  llm_provider.py  prediction_strategy.py  session_repository.py
src/domain/value_objects/: __init__.py  accuracy.py  context.py
src/evaluators/: __init__.py  accuracy.py
src/generators/: __init__.py  answer.py  code.py
src/infrastructure/: __init__.py
src/infrastructure/context_sharing/: __init__.py  cloud_sharing.py  file_sharing.py  sharing_factory.py
src/infrastructure/llm_providers/: __init__.py  base_provider.py  claude_provider.py  deepseek_provider.py  openai_provider.py  (+1 more)
src/predictors/: __init__.py  embeddings.py  question.py
src/presentation/: __init__.py
src/sessions/: __init__.py  checkpoint.py  orchestrator.py
src/strategies/: __init__.py  manager.py
src/utils/: __init__.py  ai_client.py  logging.py
tests/: __init__.py  conftest.py  test_core.py  test_evaluators.py  test_predictors.py
tests/integration/: test_orchestrator.py
tests/unit/: test_entities.py
(+12 files in other folders)
